--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,17 +105,17 @@
     <string name="hello_world">Hello world!</string>
 
     <string name="credits_backend">Back-end Developers</string>
+    <string name="credits_frontend">Front-end Developers</string>
+    <string name="credits_tests">Automated Tests Developer</string>
+    <string name="credits_contributors">Language Contributors</string>
+
     <string name="developer1">Dovydas Rupšys</string>
     <string name="developer2">Oliver Philip Höhn</string>
-
-    <string name="credits_frontend">Front-end Developers</string>
     <string name="developer3">Martin Kubat</string>
     <string name="developer4">Tim Beswick</string>
-
-    <string name="credits_tests">Automated Tests Developers</string>
     <string name="developer5">Max Karasiński</string>
 
-    <string name="credits_contributors">Language Contributors</string>
+    <!--Language Contributors-->
     <string name="contributor1">Laimonas Juodis</string>
     <string name="contributor2">Julija Gaidelyte</string>
 
